--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ticnap'Notnac</title>
+    <title>Jhon Paul Perfume</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
@@ -13,41 +13,47 @@
     <div class="container">
         <div class="row">
             <div class="col-12 text-center">
-                <h2>IPhone Store</h2>
+                <h2>Pauls Perfume</h2>
                 <hr class="hr" />
             </div>
         </div>
         <div class="row">
             <div class="col-4 text-center">
-                <label id="product1">IPhone 11 ProMax</label>
+                <label id="product1">Tiffany & Co.</label>
                 <img src="IP11.png" style="width:550px;height:500px;" class="img-thumbnail"/><br>
-                <label for="product1" id="price1">80990.00</label>
+                <label for="product1" id="price1">1500.00</label>
                 <input type="number" class="form-control" id="qty1" placeholder="Enter quantity"/><br>
             </div>
             <div class="col-4 text-center">
-                <label id="product2">IPhone XR</label>
+                <label id="product2">Nicolai</label>
                 <img src="IPxr.png" style="width:550px;height:500px;" class="img-thumbnail"/><br>
-                <label for="product2" id="price2">49769.00</label>
+                <label for="product2" id="price2">2000.00</label>
                 <input type="number" class="form-control" id="qty2" placeholder="Enter quantity"/><br>
             </div>
             <div class="col-4 text-center">
-                <label id="product3">IPhone 13 ProMax</label>
+                <label id="product3">Creed</label>
                 <img src="IP13.png" style="width:550px;height:500px;" class="img-thumbnail"/><br>
-                <label for="product3" id="price3">79789.00</label>
+                <label for="product3" id="price3">3100.00</label>
                 <input type="number" class="form-control" id="qty3" placeholder="Enter quantity"/><br>
             </div>
         </div>
         <div class="row">
             <div class="col-4 text-center">
-                <label id="product4">IPhone 14 ProMax</label>
+                <label id="product4">Chanel</label>
                 <img src="IP14.png" style="width:550px;height:500px;" class="img-thumbnail"/><br>
-                <label for="product4" id="price4">68598.00</label>
+                <label for="product4" id="price4">1300.00</label>
                 <input type="number" class="form-control" id="qty4" placeholder="Enter quantity"/><br>
             </div>
             <div class="col-4 text-center">
-                <label id="product5">IPhone 15 ProMax</label>
+                <label id="product5">Black Opium</label>
                 <img src="IP15.png" style="width:550px;height:500px;" class="img-thumbnail"/><br>
-                <label for="product5" id="price5">89879.00</label>
+                <label for="product5" id="price5">2700.00</label>
+                <input type="number" class="form-control" id="qty5" placeholder="Enter quantity"/><br>
+            </div>
+            <div class="col-4 text-center">
+                <label id="product5">Calvin Klein</label>
+                <img src="IP15.png" style="width:550px;height:500px;" class="img-thumbnail"/><br>
+                <label for="product5" id="price5">2000.00</label>
                 <input type="number" class="form-control" id="qty5" placeholder="Enter quantity"/><br>
             </div>
              <div class="col-4">
