--- a/index.html
+++ b/index.html
@@ -20,19 +20,19 @@
         <div class="row">
             <div class="col-4 text-center">
                 <label id="product1">Tiffany & Co.</label>
-                <img src="IP11.png" style="width:550px;height:500px;" class="img-thumbnail"/><br>
+                <img src="P1.jpeg" style="width:550px;height:500px;" class="img-thumbnail"/><br>
                 <label for="product1" id="price1">1500.00</label>
                 <input type="number" class="form-control" id="qty1" placeholder="Enter quantity"/><br>
             </div>
             <div class="col-4 text-center">
                 <label id="product2">Nicolai</label>
-                <img src="IPxr.png" style="width:550px;height:500px;" class="img-thumbnail"/><br>
+                <img src="P2.png" style="width:550px;height:500px;" class="img-thumbnail"/><br>
                 <label for="product2" id="price2">2000.00</label>
                 <input type="number" class="form-control" id="qty2" placeholder="Enter quantity"/><br>
             </div>
             <div class="col-4 text-center">
                 <label id="product3">Creed</label>
-                <img src="IP13.png" style="width:550px;height:500px;" class="img-thumbnail"/><br>
+                <img src="P3.jpeg" style="width:550px;height:500px;" class="img-thumbnail"/><br>
                 <label for="product3" id="price3">3100.00</label>
                 <input type="number" class="form-control" id="qty3" placeholder="Enter quantity"/><br>
             </div>
@@ -40,19 +40,19 @@
         <div class="row">
             <div class="col-4 text-center">
                 <label id="product4">Chanel</label>
-                <img src="IP14.png" style="width:550px;height:500px;" class="img-thumbnail"/><br>
+                <img src="P4.jpeg" style="width:550px;height:500px;" class="img-thumbnail"/><br>
                 <label for="product4" id="price4">1300.00</label>
                 <input type="number" class="form-control" id="qty4" placeholder="Enter quantity"/><br>
             </div>
             <div class="col-4 text-center">
                 <label id="product5">Black Opium</label>
-                <img src="IP15.png" style="width:550px;height:500px;" class="img-thumbnail"/><br>
+                <img src="P5.png" style="width:550px;height:500px;" class="img-thumbnail"/><br>
                 <label for="product5" id="price5">2700.00</label>
                 <input type="number" class="form-control" id="qty5" placeholder="Enter quantity"/><br>
             </div>
             <div class="col-4 text-center">
                 <label id="product5">Calvin Klein</label>
-                <img src="IP15.png" style="width:550px;height:500px;" class="img-thumbnail"/><br>
+                <img src="P6.jpeg" style="width:550px;height:500px;" class="img-thumbnail"/><br>
                 <label for="product5" id="price5">2000.00</label>
                 <input type="number" class="form-control" id="qty5" placeholder="Enter quantity"/><br>
             </div>
